# AimTrainer

./: CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt  glad.h
include/: AimTrainer.hpp  Camera.hpp  CubeMap.hpp  FrameBuffer.hpp  Gui.hpp  ImGuiWrapper.hpp  Mesh.hpp  Model.hpp  MousePicker.hpp  ObjectPicker.hpp  RandomGenerator.hpp  Shader.hpp  Texture.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
include/data/: Key.hpp  Matrices.hpp  WindowData.hpp
include/handler/: HandlerBase.hpp  KeyHandler.hpp  MovementHandler.hpp
include/renderer/: Renderer.hpp  RendererBase.hpp  RendererCreator.hpp
include/utils/: Utils.hpp
main/: main.cpp
shaders/: crosshair.shader  picking.shader  quad.shader  shaderTest.shader
src/: AimTrainer.cpp  Camera.cpp  CubeMap.cpp  ErrorHandle.cpp  FrameBuffer.cpp  Gui.cpp  ImGuiWrapper.cpp  IndexBuffer.cpp  Mesh.cpp  Model.cpp  MousePicker.cpp  ObjectPicker.cpp  RandomGenerator.cpp  Shader.cpp  Texture.cpp  VertexBuffer.cpp
src/data/: Key.cpp  WindowData.cpp
src/handler/: HandlerBase.cpp  KeyHandler.cpp  MovementHandler.cpp
src/renderer/: Renderer.cpp  RendererBase.cpp
src/utils/: Utils.cpp
